# TurboSplat-Viz

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
asset/: default_scene.ini
cmake/: ucrt.cmake
src/: CMakeLists.txt  main.cpp  main_loop.cpp  main_loop.h  windowswindow.cpp  windowswindow.h
src/game/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  controller.cpp  device_input.cpp  gaussian_loader.cpp  gaussian_loader.h  object.cpp  world.cpp
src/game/include/: camera.h  controller.h  device_input.h  game_dll_helper.h  object.h  world.h
src/launch/: CMakeLists.txt  screen_splash.cpp
src/launch/include/: screen_splash.h
src/render/: CMakeLists.txt  d3d_helper.h  d3d_resources.cpp  gaussian_render_proxy.cpp  gaussian_shading_model.cpp  mesh_gaussian_pipeline.cpp  pipeline_object.cpp  render.cpp  render_proxy.cpp  render_thread.cpp  render_threads_pool.cpp  scene.cpp  scene_render.cpp  scene_renderer.cpp  shading_model.cpp  view_info.cpp
src/render/cmake/: ShaderCopy.cmake
src/render/d3dhelper/: descriptor_heap.cpp  device.cpp
src/render/d3dhelper/include/: descriptor_heap.h  device.h
src/render/include/: __d3d_resources.h  agility_sdk.h  d3d_resources.h  dll_helper.h  render_proxy.h  render_thread.h  render_threads_pool.h  renderer.h  scene.h  scene_render.h  scene_renderer.h  shading_model.h  view_info.h  viewport_info.h
src/render/private_include/: mesh_gaussian_pipeline.h  pipeline_object.h  render_config.h  render_thread.h  render_threads_pool.h  scene_renderer.h
src/render/shader/GPUSorting/: SortCommon.hlsl  SweepCommon.hlsl
src/render/shader/alpha_triangle/: clear_perpixel_linked_list.hlsl  pixel_shader.hlsl  ps_header.hlsli  render_perpixel_linkedlist.hlsl  vertex_shader.hlsl
src/render/shader/default/: pixel_shader.hlsl  vertex_shader.hlsl  vs_header.hlsli
src/render/shader/gaussian_splatting/: DrawCS.hlsl  GaussianMS.hlsl  GaussianPS_PPLL.hlsl  clear_perpixel_linked_list.hlsl  create_ppll_common.hlsli  struct_define.hlsli
src/render/shader/ms_gaussian_splatting/: ClearCS.hlsl  ClusterCullCS.hlsl  ClusterCullClear.hlsl  FillDataCS.hlsl  GaussianAS.hlsl  GaussianMS.hlsl  GaussianPS.hlsl  SortCS.hlsl  struct_define.hlsli
src/render/shader/triangle/: pixel_shader.hlsl  ps_header.hlsli  vertex_shader.hlsl  vs_header.hlsli
src/util/: CMakeLists.txt  threadspool.cpp
src/util/include/: lockfree_queue.h  threadspool.h
